# llm-council

./: .deployment  .gitignore  .vercelignore  ADD-OPENROUTER-KEY-AZURE.md  ADD-OPENROUTER-KEY.md  ADD-RAILWAY-URL-TO-VERCEL.md  AZURE-404-FIX.md  BUTTON-VISIBILITY-FIX.md  CHECK-DEPLOYMENT-FILE.md  CHECK-DEPLOYMENT-PACKAGE.md  CHECK-FILES-VIA-SSH.md  CHECK-FRONTEND-DIR.md  CHECK-IF-APP-IS-WORKING.md  CHECK-STARTUP-LOGS.md  CLAUDE.md  COMPLETE-DEPLOYMENT-FROM-SCRATCH.md  COMPREHENSIVE-DIAGNOSTIC.md  CONTEXT-UX-FINAL.md  DATA-PERSISTENCE-GUARANTEE.md  DEBUG-405-ERROR.md  DEBUG-BACKEND-CONNECTION.md  DEPLOY-AZURE.md  DEPLOY-FRONTEND-AZURE.md  DEPLOY-NOW.md  DEPLOY-NOW.sh  DEPLOY-RAILWAY-VERCEL.md  DEPLOY-RENDER-NOW.md  DEPLOY-SINGLE-URL.md  DEPLOY-WITH-RENDER.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE-AZURE-ONLY.md  DEPLOYMENT-GUIDE.md  DIAGNOSE-APP-NOT-RUNNING.md  EASY-PUSH.md  ENABLE-AUTO-DEPLOY-AZURE.md  ENHANCED-CONTEXT-VISIBILITY.md  ENSURE-DATA-PERSISTENCE.md  ENVIRONMENT-VARIABLES.md  EXACT-STEPS.md  FINAL-STARTUP-FIX.md  (+76 more)
.azure/: appsettings.json.example
.cursor/rules/: log-review-on-bugs.mdc
.github/workflows/: azure-static-web-apps-purple-cliff-052a1150f.yml  main_llm-council-app.yml
backend/: config.py  context_engineering.py  council.py  database.py  document_parser.py  logger.py  main.py  migrate_json_to_db.py  openrouter.py  preparation.py  prompt_engineering.py  rag_system.py  storage.py  storage_db.py
backend/static/: index.html
docs/: LOGS.md  TRACING-CLIENT-ERRORS.md
frontend/: vite.config.js
frontend/src/: App.css  (+5 more)
scripts/: review-logs.sh
(+91 files in other folders)
